--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
   assets:
     - assets/images/
     - .env
+    - image.jpg
   #  an assets section, like this:
   #   assets:
   #     - assets/images/
