--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   mailer: ^6.3.0
   provider: ^6.1.2
   shimmer: ^3.0.0
+  razorpay_flutter: ^1.3.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
